add config, db, and utils

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,22 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+server.servlet.context-path=/test-java8
+server.port=8080
+
+logging.level.org.hibernate=INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+logging.level.org.springframework=INFO
+logging.level.com.doku=DEBUG
+logging.pattern.console=%blue(%d{yyyy-MM-dd HH:mm:ss}) %cyan([%mdc]) [%thread] %highlight(%level) %yellow(%logger{15}) - %msg%n
+logging.pattern.file=%blue(%d{yyyy-MM-dd HH:mm:ss}) %cyan([%mdc]) [%thread] %highlight(%level) %yellow(%logger{15}) - %msg%n
+logging.file=logs/server.log
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/tesjava8
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+http.request.connection.timeout=20000
+http.request.read.timeout=20000
